vlib/v/checker/tests/wrong_shift_left_option_err.vv
pub struct SomeStruct {
	i int
}

fn main() {
	mut a := ?[]SomeStruct([SomeStruct{}, SomeStruct{}]) // struct type
	a << []SomeStruct{len: 20}
	mut b := ?[]int([2, 8]) // primitive type
	b << [1, 3, 4]
	dump(a?.len)
	dump(b)
}
